--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: frontpage
 active: index
+title: "Index"
 ---
-    <div id="container">
-      <div class="inner">
+
 
         <header>
           <h1>Bikepedia</h1>
@@ -44,5 +44,3 @@ active: index
 
             <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
         </section>
-      </div>
-    </div>
