--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 ---
 layout: frontpage
 active: index
-title: "Index"
+title: "Bikepedia"
 ---
-    <header>
-      <h1>Bikepedia</h1>
-      <h2></h2>
-    </header>
     <ul>
         {% for part in site.parts %}
         <li>
