--- a/_parts/wilson_carbon.html
+++ b/_parts/wilson_carbon.html
@@ -2,6 +2,7 @@
 layout: parts
 title: "WILSON CARBON SL"
 breadcrumb: "WILSON CARBON SL"
+permalink: /parts/wilson_carbon/
 categories: frame
 ---
 WILSON CARBON SL Frame
