--- a/_parts/wilson_carbon.html
+++ b/_parts/wilson_carbon.html
@@ -2,7 +2,7 @@
 layout: parts
 title: "WILSON CARBON SL"
 breadcrumb: "WILSON CARBON SL"
-permalink: /parts/wilson_carbon/
+permalink: /parts/wilson_carbon_xxx/
 categories: frame
 ---
 WILSON CARBON SL Frame
