--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 layout: frontpage
 active: index
 title: "Bikepedia"
+breadcrumb: "Bikepedia"
 ---
-<a href="{{ '/frames' | prepend: site.baseurl }}">Frames</a>
+<a href="{{ 'frames' | prepend: site.baseurl }}">Frames</a>
