--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ active: index
 title: "Bikepedia"
 breadcrumb: "Bikepedia"
 ---
-<a href="{{ 'frames' | prepend: site.baseurl }}">Frames</a>
+<a href="{{ '/frames' | prepend: site.baseurl }}">Frames</a>
