--- a/frames/index.html
+++ b/frames/index.html
@@ -3,6 +3,7 @@ layout: default
 title: "Frames"
 breadcrumb: "Frames"
 permalink: /frames/
+categories: frame
 ---
     <ul>
         {% for part in site.parts %}
