--- a/frames/wilson_carbon.html
+++ b/frames/wilson_carbon.html
@@ -1,5 +1,5 @@
 ---
-layout: parts
+layout: default
 title: "WILSON CARBON SL"
 breadcrumb: "WILSON CARBON SL"
 permalink: /frames/wilson_carbon_sl/
